Twenty Twelve: remove aggressive text-align rule, set to inherit instead to allow editor-added styles to justify per author's desire. Props obenland, fixes #21739.
git-svn-id: http://core.svn.wordpress.org/trunk@21667 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwelve/rtl.css
+++ b/wp-content/themes/twentytwelve/rtl.css
@@ -189,10 +189,6 @@ label ~ span.required {
 	.site-header h2 {
 		text-align: right;
 	}
-	.entry-content p,
-	.entry-summary p {
-		text-align: right;
-	}
 	.template-home .widget-area .widget_text img {
 		float: right;
 		margin: 8px 0 8px 24px;
